prb3-monitor: fix dark mode

--- a/frontend/apps/prb3-monitor/src/styles/globals.css
+++ b/frontend/apps/prb3-monitor/src/styles/globals.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /*color: rgb(var(--foreground-rgb));*/
   padding: 0;
   margin: 0;
 }
